--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body>
+	<header>
+		<section>
+			Luis Jair Juarez Sanchez
+		</section>
+		<footer>
+			Derechos reservados &copy;
+		</footer>
+	</header>
 
 </body>
 </html>
